--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
 </div>
 
 
+<div class="hideBox1" id="hah2">
+  <div>
+    <h2>" تهانينا لك "</h2>
+    <p>برجاء تسجيل الدخول حتى تتمكن من اتمام تسجيلك في المسابقة</p>
+    <button class="hahButton" type="button">تسجيل الدخول</button>
+  </div>
+</div>
+
+<div id="goTo"></div>
+    
 <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/TweenMax.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/utils/Draggable.min.js'></script>
 <script src='js/ThrowPropsPlugin.min.js'></script>
